# simpleOCCTVP

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.test  NOTICE  README.md  context7.json  ecosystem.yml
.github/workflows/: build.yml
docs/: _config.yml
docs/guides/: getting-started.md
docs/models/: cylinder.glb  drilled-block.glb  l-bracket.glb  rounded-block.glb  tube.glb
docs/reference/: c-api.md
examples/: render_quality_demo.cpp
okf/: index.md
okf/components/: index.md
okf/policies/: writing-style.md
okf/references/: index.md
pascal/: occt_templot.pas
scripts/: build-occt-deps.sh
src/: occt_templot.h  occt_templot_builder.cpp  occt_templot_heal.cpp  occt_templot_internal.h  occt_templot_io.cpp  occt_templot_mesh.cpp  occt_templot_render_data.cpp  occt_templot_trace.cpp  occt_templot_trace.h  occt_templot_viewer.cpp
tests/: test_builder.cpp  test_heal.cpp  test_io.cpp  test_render_data.cpp  test_viewer.cpp
